# kanuni_rag

./: .dockerignore  .env.example  .gitignore  .mcp.json  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SPEC.md  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  sources.yaml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  evals.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/scripts/: export_openapi_schema.py
apps/api/src/kanuni_api/: __init__.py  config.py  dependencies.py  embedding.py  exceptions.py  main.py  reranker.py  sources.py  storage.py
apps/api/src/kanuni_api/db/: __init__.py  api_keys_repository.py  documents_repository.py  health.py  ingestion_jobs_repository.py  pool.py  queries_repository.py
apps/api/src/kanuni_api/generation/: __init__.py  citation.py  confidence.py  llm_client.py  prompt_loader.py
apps/api/src/kanuni_api/generation/prompts/: README.md  answer_v1.md
apps/api/src/kanuni_api/middleware/: __init__.py  auth.py  error_handler.py  rate_limit.py  request_id.py
apps/api/src/kanuni_api/models/: __init__.py  api_key.py  document.py  ingestion_job.py  query.py  retrieval.py
apps/api/src/kanuni_api/retrieval/: __init__.py  dense.py  fusion.py  rerank.py  sparse.py
apps/api/src/kanuni_api/routes/: __init__.py  admin.py  documents.py  health.py  query.py
apps/api/src/kanuni_api/services/: __init__.py  document_ingestion_service.py  query_service.py  retrieval_service.py
apps/api/src/kanuni_api/telemetry/: __init__.py  logging.py  sentry.py
apps/api/tests/: __init__.py  api_fakes.py  conftest.py  test_config.py  test_exceptions.py  test_main.py
apps/api/tests/generation/: test_citation.py  test_confidence.py
apps/api/tests/integration/: conftest.py  test_admin_upload_integration.py
apps/api/tests/middleware/: __init__.py  test_auth.py  test_error_handler.py  test_rate_limit.py  test_request_id.py
apps/api/tests/retrieval/: test_fusion.py  test_rerank.py
apps/api/tests/routes/: test_admin.py  test_admin_retrieve.py  test_documents.py  test_query.py
apps/api/tests/services/: test_document_ingestion_service.py  test_query_service.py
apps/ingestion/: Dockerfile  pyproject.toml
apps/ingestion/src/kanuni_ingest/: __init__.py  __main__.py  cli.py  config.py  embedding.py  exceptions.py  metadata_extraction.py  models.py  pipeline.py  regex_extraction.py  registry.py  storage.py  versioning.py
apps/ingestion/src/kanuni_ingest/db/: __init__.py  chunks_repository.py  document_relations_repository.py  documents_repository.py  ingestion_jobs_repository.py  pool.py
apps/ingestion/src/kanuni_ingest/stages/: __init__.py  chunk.py  embed.py  extract.py  fetch.py  index.py  ocr.py
apps/ingestion/src/kanuni_ingest/telemetry/: sentry.py
apps/ingestion/tests/: __init__.py  conftest.py  fakes.py  test_cli.py  test_pipeline.py  test_regex_extraction.py  test_versioning.py
apps/ingestion/tests/integration/: conftest.py  test_full_ingestion.py
apps/ingestion/tests/stages/: test_chunk.py
apps/web/: .eslintrc.json  Dockerfile  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: instrumentation-client.ts  instrumentation.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/api/documents/: route.ts
apps/web/src/app/api/documents/[id]/: route.ts
apps/web/src/app/api/query/: route.ts
apps/web/src/app/documents/: page.tsx
apps/web/src/components/: AskExperience.tsx  ChunkSidePanel.tsx  CitationChip.tsx  ConfidenceBanner.tsx  DocumentsExperience.tsx  ErrorState.tsx  Nav.tsx  RecentQuestions.tsx  RefusalState.tsx
apps/web/src/lib/: citations.ts  serverConfig.ts  streamQuery.ts  useRecentQuestions.ts
apps/web/src/lib/supabase/: client.ts  server.ts
docs/: NEEDS.md  PROGRESS.md  architecture.md  data-model.md  runbook.md
docs/adr/: 0001-bun-over-pnpm-for-js-tooling.md  0001-v1-corpus-scoped-to-bank-of-tanzania.md  0002-source-id-free-text-slug.md  0003-raw-rerank-score-stored-as-confidence.md  0004-swahili-full-text-search-config.md  0005-uv-workspace-over-separate-projects.md  0006-bun-over-pnpm-for-js-tooling.md  README.md
evals/: prepare_eval_corpus.py  report.py  run_answer_eval.py  run_retrieval_eval.py
evals/golden/: README.md  fixture_qa.jsonl  qa.jsonl
infra/deploy/: deploy_to_hf_space.sh  smoke_test.py
infra/k6/: rate-limit-load-test.js
infra/migrations/: 0001_create_initial_schema.sql  0002_per_language_chunk_tsvector.sql  0003_enable_row_level_security.sql  0004_enable_rls_on_schema_migrations.sql
