[project]
name = "kanuni"
version = "0.1.0"
description = "Kanuni monorepo workspace root — see PROJECT_SPEC.md."
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv.workspace]
members = ["apps/api", "apps/ingestion"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps/api/src", "apps/ingestion/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "N",   # pep8-naming
]

[tool.ruff.lint.isort]
known-first-party = ["kanuni_api", "kanuni_ingest"]

[tool.mypy]
python_version = "3.12"
strict = true
files = [
    "apps/api/src",
    "apps/api/tests",
    "apps/api/scripts",
    "apps/ingestion/src",
    "apps/ingestion/tests",
    "evals",
    "infra/deploy",
]
mypy_path = ["apps/api/src", "apps/ingestion/src", "apps/ingestion/tests"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytesseract.*", "fitz.*", "sentence_transformers.*", "pdfplumber.*"]
ignore_missing_imports = true

# apps/api/tests isn't on mypy_path (adding it would collide with
# apps/ingestion/tests' "conftest" — see the pytest addopts comment below);
# api_fakes.py is still type-checked directly via `files` above, this just
# lets sibling test files resolve the bare `from api_fakes import ...`.
[[tool.mypy.overrides]]
module = "api_fakes"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/ingestion/tests"]
asyncio_mode = "auto"
# apps/api/tests and apps/ingestion/tests share a basename ("tests") and,
# under the default "prepend" import mode, their conftest.py files collide
# in sys.modules; importlib mode resolves each by its full file path instead.
# Neither tree has an __init__.py, for the same reason — see each
# conftest.py's sys.path shim for how sibling test-only modules (e.g.
# apps/ingestion/tests/fakes.py) are still importable by bare name.
addopts = "--import-mode=importlib"
