[project]
name = "kanuni-api"
version = "0.1.0"
description = "Kanuni FastAPI service: query path and admin/ingestion HTTP surface."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanuni_api"]
