[project]
name = "kanuni-ingestion"
version = "0.1.0"
description = "Kanuni ingestion pipeline worker and bulk-ingestion CLI."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "asyncpg>=0.30.0",
    "tenacity>=9.0.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.13",
    "pillow>=10.4.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "sentence-transformers>=3.2.0",
    "sentry-sdk>=2.17.0",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kanuni_ingest"]

[project.scripts]
kanuni = "kanuni_ingest.cli:app"
